--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header class="navbar">
-  <div class="logo">Coastal Junk Removal</div>
+  <img src="/assets/logo.png" alt="Coastal Junk Removal Logo" style="height: 50px;">
   <div class="hamburger" onclick="toggleMenu()">
     <span></span>
     <span></span>
@@ -22,12 +22,13 @@
     <a href="/junk-removal.html">Junk Removal</a>
     <a href="/moving-services.html">Moving Services</a>
     <a href="/contact.html">Contact</a>
+    <a href="/login.html">Admin</a>
   </nav>
 </header>
 
 <section class="hero">
   <div class="hero-content">
-    <h1>Luxury Junk Removal & Moving</h1>
+    <h1>Junk Removal & Moving</h1>
     <p>White-Glove Service for Homes, Estates, and Businesses across Coastal Virginia.</p>
     <a href="/contact.html" class="cta-button">Get a Free Estimate</a>
   </div>
@@ -41,7 +42,7 @@
   </div>
   <div class="service">
     <h2>Moving Services</h2>
-    <p>Relocate with ease. Our luxury moving service ensures careful packing, transportation, and setup for residential and commercial clients seeking a stress-free moving experience.</p>
+    <p>Relocate with ease. Our moving service ensures careful packing, transportation, and setup for residential and commercial clients seeking a stress-free moving experience.</p>
     <a href="/moving-services.html" class="cta-button">Explore Moving</a>
   </div>
 </section>
