--- a/public/contact.html
+++ b/public/contact.html
@@ -1,69 +1,59 @@
-<!-- File: contact.html -->
+<!-- File: /public/contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Coastal Junk Removal">
-  <title>Get an Instant Junk Removal Quote | Coastal Junk Removal</title>
-  <meta name="description" content="Upload 3 photos of your junk and receive a fast, AI-powered estimate. Coastal Junk Removal offers premium junk hauling services in Newport News VA.">
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Contact | Coastal Junk Removal</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <a href="index.html"><img src="assets/logo.png" alt="Coastal Junk Removal Logo"></a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="junk-removal.html">Junk Removal</a></li>
-        <li><a href="moving-services.html">Moving Services</a></li>
-        <li><a href="service-areas.html">Service Areas</a></li>
-        <li><a href="testimonials.html">Testimonials</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
-    <section>
-      <h1>Request Your Instant Junk Removal Estimate</h1>
-      <p>Upload 3 photos of your junk from different angles. Our AI will instantly review and return an estimate personalized to your project.</p>
-    </section>
+<header class="navbar">
+  <img src="/assets/logo.png" alt="Coastal Junk Removal Logo" style="height: 50px;">
+  <div class="hamburger" onclick="toggleMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <nav class="nav-links" id="navMenu">
+    <a href="/index.html">Home</a>
+    <a href="/junk-removal.html">Junk Removal</a>
+    <a href="/moving-services.html">Moving Services</a>
+    <a href="/contact.html">Contact</a>
+    <a href="/login.html">Admin</a>
+  </nav>
+</header>
 
-    <form action="/submit-quote" method="POST" enctype="multipart/form-data">
-      <fieldset>
-        <legend>Upload Photos</legend>
-        <label for="photo1">Photo 1:</label>
-        <input type="file" id="photo1" name="photo1" accept="image/*" required>
-        <label for="photo2">Photo 2:</label>
-        <input type="file" id="photo2" name="photo2" accept="image/*" required>
-        <label for="photo3">Photo 3:</label>
-        <input type="file" id="photo3" name="photo3" accept="image/*" required>
-      </fieldset>
+<section class="hero" style="background: url('/assets/hero.png') center/cover no-repeat;">
+  <div class="hero-content">
+    <h1>Contact Coastal Junk Removal</h1>
+    <p>Reach out today for full-service hauling and moving assistance across Coastal Virginia.</p>
+  </div>
+</section>
 
-      <fieldset>
-        <legend>Your Information</legend>
-        <label for="name">Full Name:</label>
-        <input type="text" id="name" name="name" placeholder="John Doe" required>
-        <label for="email">Email Address:</label>
-        <input type="email" id="email" name="email" placeholder="you@example.com" required>
-        <label for="phone">Phone Number:</label>
-        <input type="tel" id="phone" name="phone" placeholder="(123) 456-7890" required>
-        <label for="address">Pickup Address:</label>
-        <input type="text" id="address" name="address" placeholder="123 Main St, Newport News, VA" required>
-        <label for="description">Description of Items:</label>
-        <textarea id="description" name="description" placeholder="Briefly describe the items you need removed..." rows="4" required></textarea>
-      </fieldset>
-
-      <button type="submit">Submit Photos & Request Quote</button>
+<section class="services" style="flex-direction: column; align-items: center;">
+  <div class="service" style="max-width:600px;">
+    <h2>Get in Touch</h2>
+    <form action="/thank-you.html" method="POST" style="display:flex; flex-direction:column; gap:1rem;">
+      <input type="text" name="name" placeholder="Your Name" required style="padding:0.75rem; border-radius:8px; border:none;">
+      <input type="email" name="email" placeholder="Your Email" required style="padding:0.75rem; border-radius:8px; border:none;">
+      <input type="text" name="phone" placeholder="Your Phone" required style="padding:0.75rem; border-radius:8px; border:none;">
+      <textarea name="message" rows="5" placeholder="Tell us about your project..." required style="padding:0.75rem; border-radius:8px; border:none;"></textarea>
+      <button type="submit" class="cta-button">Send Message</button>
     </form>
-  </main>
+  </div>
+</section>
 
-  <footer>
-    <p>&copy; 2024 Coastal Junk Removal. Luxury junk removal and hauling services for Newport News and surrounding areas. Fast. Eco-friendly. Professional.</p>
-  </footer>
+<footer class="footer">
+  <p>&copy; 2024 Coastal Junk Removal | Trusted Service Providers</p>
+</footer>
+
+<script>
+function toggleMenu() {
+  document.getElementById('navMenu').classList.toggle('active');
+}
+</script>
 </body>
 </html>
