--- a/public/junk-removal.html
+++ b/public/junk-removal.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luxury Junk Removal | Coastal Junk Removal</title>
+  <title>Junk Removal | Coastal Junk Removal</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
 <header class="navbar">
-  <div class="logo">Coastal Junk Removal</div>
+  <img src="/assets/logo.png" alt="Coastal Junk Removal Logo" style="height: 50px;">
   <div class="hamburger" onclick="toggleMenu()">
     <span></span>
     <span></span>
@@ -22,92 +22,35 @@
     <a href="/junk-removal.html">Junk Removal</a>
     <a href="/moving-services.html">Moving Services</a>
     <a href="/contact.html">Contact</a>
+    <a href="/login.html">Admin</a>
   </nav>
 </header>
 
-<section class="hero" style="background: url('/assets/junk-removal-hero.jpg') center/cover no-repeat;">
+<section class="hero" style="background: url('/assets/hero.png') center/cover no-repeat;">
   <div class="hero-content">
-    <h1>Luxury Junk Removal Services</h1>
-    <p>High-end hauling solutions for homes, estates, and businesses in Coastal Virginia.</p>
-    <a href="/contact.html" class="cta-button">Schedule Service</a>
+    <h1>Professional Junk Removal Services</h1>
+    <p>Full-service cleanouts for homes, estates, and businesses across Coastal Virginia.</p>
+    <a href="/contact.html" class="cta-button">Book Junk Removal</a>
   </div>
 </section>
 
 <section class="services">
   <div class="service">
     <h2>White-Glove Junk Removal</h2>
-    <p>We specialize in full-service junk removal tailored for luxury estates, offices, and discerning homeowners. From careful handling to eco-conscious disposal, Coastal Junk Removal offers premium hauling solutions that protect your property and privacy.</p>
-    <ul style="text-align:left;">
-      <li>Estate Cleanouts</li>
-      <li>Garage and Basement Cleanups</li>
-      <li>Office and Commercial Clearouts</li>
-      <li>Appliance and Furniture Removal</li>
-      <li>Eco-Friendly Donation and Recycling</li>
+    <p>We provide detailed, respectful cleanouts tailored for homes, estates, and office properties. Our team handles bulky furniture, electronics, appliances, and debris with precision and care — always protecting your property and maintaining professionalism.</p>
+    <ul style="text-align:left; padding-left: 1rem;">
+      <li>Estate & Foreclosure Cleanouts</li>
+      <li>Furniture, Appliance & Debris Removal</li>
+      <li>Garage, Basement & Attic Cleanups</li>
+      <li>Donation, Recycling & Disposal</li>
+      <li>Discreet & On-Time Service</li>
     </ul>
-    <a href="/contact.html" class="cta-button">Book Now</a>
+    <a href="/contact.html" class="cta-button">Get Estimate</a>
   </div>
 </section>
 
 <footer class="footer">
-  <p>&copy; 2024 Coastal Junk Removal | Premium Hauling Solutions</p>
-</footer>
-
-<script>
-function toggleMenu() {
-  document.getElementById('navMenu').classList.toggle('active');
-}
-</script>
-
-</body>
-</html><!-- File: /public/contact.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Coastal Junk Removal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-
-<header class="navbar">
-  <div class="logo">Coastal Junk Removal</div>
-  <div class="hamburger" onclick="toggleMenu()">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-  <nav class="nav-links" id="navMenu">
-    <a href="/index.html">Home</a>
-    <a href="/junk-removal.html">Junk Removal</a>
-    <a href="/moving-services.html">Moving Services</a>
-    <a href="/contact.html">Contact</a>
-  </nav>
-</header>
-
-<section class="hero" style="background: url('/assets/contact-hero.jpg') center/cover no-repeat;">
-  <div class="hero-content">
-    <h1>Contact Coastal Junk Removal</h1>
-    <p>Reach out today for premium hauling and moving services.</p>
-  </div>
-</section>
-
-<section class="services" style="flex-direction: column; align-items: center;">
-  <div class="service" style="max-width:600px;">
-    <h2>Get in Touch</h2>
-    <form action="/thank-you.html" method="POST" style="display:flex; flex-direction:column; gap:1rem;">
-      <input type="text" name="name" placeholder="Your Name" required style="padding:0.75rem; border-radius:8px; border:none;">
-      <input type="email" name="email" placeholder="Your Email" required style="padding:0.75rem; border-radius:8px; border:none;">
-      <input type="text" name="phone" placeholder="Your Phone" required style="padding:0.75rem; border-radius:8px; border:none;">
-      <textarea name="message" rows="5" placeholder="Tell us about your project..." required style="padding:0.75rem; border-radius:8px; border:none;"></textarea>
-      <button type="submit" class="cta-button">Send Message</button>
-    </form>
-  </div>
-</section>
-
-<footer class="footer">
-  <p>&copy; 2024 Coastal Junk Removal | Premium Client Services</p>
+  <p>&copy; 2024 Coastal Junk Removal | Hauling Solutions You Can Trust</p>
 </footer>
 
 <script>
