--- a/public/login.html
+++ b/public/login.html
@@ -1,31 +1,71 @@
-<!-- File: login.html -->
+<!-- File: /public/login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex, nofollow">
   <title>Admin Login | Coastal Junk Removal</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <style>
+    .login-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #0a0a0a;
+      color: white;
+      padding: 2rem;
+    }
+    .login-form {
+      background: #1a1a1a;
+      padding: 2rem;
+      border-radius: 12px;
+      max-width: 400px;
+      width: 100%;
+    }
+    .login-form input {
+      width: 100%;
+      padding: 0.75rem;
+      margin-bottom: 1rem;
+      border: none;
+      border-radius: 8px;
+    }
+    .login-form button {
+      width: 100%;
+      padding: 0.75rem;
+      background: #800020;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <main class="login-wrapper">
-    <section class="login-box">
-      <h1>Admin Login</h1>
-      <form action="/login" method="POST">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required>
+  <div class="login-container">
+    <form class="login-form" onsubmit="return handleLogin(event)">
+      <h2>Admin Login</h2>
+      <input type="text" id="username" placeholder="Username" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
+  </div>
 
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
+  <script>
+    function handleLogin(event) {
+      event.preventDefault();
+      const user = document.getElementById('username').value;
+      const pass = document.getElementById('password').value;
 
-        <button type="submit">Log In</button>
-      </form>
-
-      <div class="login-footer">
-        <p>&copy; 2024 Coastal Junk Removal</p>
-      </div>
-    </section>
-  </main>
+      if (user === 'noxalux' && pass === 'GmaFeenz95!') {
+        sessionStorage.setItem('isAdmin', 'true');
+        window.location.href = '/admin.html';
+      } else {
+        alert('Invalid credentials');
+      }
+    }
+  </script>
 </body>
 </html>
