--- a/public/moving-services.html
+++ b/public/moving-services.html
@@ -1,58 +1,63 @@
-<!-- File: moving-services.html -->
+<!-- File: /public/moving-services.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Coastal Junk Removal">
   <title>Moving Services | Coastal Junk Removal</title>
-  <meta name="description" content="Need help moving? Coastal Junk Removal offers reliable moving services in Newport News VA. Local, fast, and professional service you can trust.">
-  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <a href="index.html"><img src="assets/logo.png" alt="Coastal Junk Removal Logo"></a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="junk-removal.html">Junk Removal</a></li>
-        <li><a href="moving-services.html" class="active">Moving Services</a></li>
-        <li><a href="service-areas.html">Service Areas</a></li>
-        <li><a href="testimonials.html">Testimonials</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
-    <section>
-      <h1>Professional Moving Services</h1>
-      <p>Whether you're relocating your home, office, or storage unit, we provide hassle-free moving assistance within Newport News and surrounding areas. Coastal Junk Removal is known for treating every move with care, precision, and speed.</p>
-    </section>
+<header class="navbar">
+  <img src="/assets/logo.png" alt="Coastal Junk Removal Logo" style="height: 50px;">
+  <div class="hamburger" onclick="toggleMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <nav class="nav-links" id="navMenu">
+    <a href="/index.html">Home</a>
+    <a href="/junk-removal.html">Junk Removal</a>
+    <a href="/moving-services.html">Moving Services</a>
+    <a href="/contact.html">Contact</a>
+    <a href="/login.html">Admin</a>
+  </nav>
+</header>
 
-    <section>
-      <h2>What We Offer</h2>
-      <ul>
-        <li>Local and same-day moving</li>
-        <li>Furniture disassembly and assembly</li>
-        <li>Loading and unloading rental trucks or pods</li>
-        <li>Apartment, condo, and home moves</li>
-        <li>Office and small business relocations</li>
-      </ul>
-    </section>
+<section class="hero" style="background: url('/assets/hero.png') center/cover no-repeat;">
+  <div class="hero-content">
+    <h1>Coastal Moving Services</h1>
+    <p>Discreet and efficient relocation services for homes, offices, and properties across Coastal Virginia.</p>
+    <a href="/contact.html" class="cta-button">Book Moving</a>
+  </div>
+</section>
 
-    <section>
-      <h2>Let’s Make Your Move Simple</h2>
-      <p>Our team will arrive promptly, handle your items with care, and complete the job efficiently. We treat your property like our own—get started with a quick quote today.</p>
-      <a href="contact.html" class="btn">Request Moving Quote</a>
-    </section>
-  </main>
+<section class="services">
+  <div class="service">
+    <h2>Professional Residential & Commercial Moving</h2>
+    <p>Our experienced team handles every detail from packing to placement. Whether you're moving into a condo, large estate, or commercial space — we provide on-time, careful and respectful moving service tailored to your schedule and needs.</p>
+    <ul style="text-align:left; padding-left: 1rem;">
+      <li>Full-Service Packing & Unpacking</li>
+      <li>Furniture Protection & Safe Transport</li>
+      <li>Coordinated Scheduling</li>
+      <li>Local & Regional Moves</li>
+      <li>White-Glove Final Placement</li>
+    </ul>
+    <a href="/contact.html" class="cta-button">Schedule Consultation</a>
+  </div>
+</section>
 
-  <footer>
-    <p>&copy; 2024 Coastal Junk Removal. Trusted moving and junk removal experts in Newport News VA. Book now for stress-free service.</p>
-  </footer>
+<footer class="footer">
+  <p>&copy; 2024 Coastal Junk Removal | Moving Services You Can Count On</p>
+</footer>
+
+<script>
+function toggleMenu() {
+  document.getElementById('navMenu').classList.toggle('active');
+}
+</script>
+
 </body>
 </html>
