--- a/public/contact.html
+++ b/public/contact.html
@@ -2,16 +2,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact | Coastal Junk Removal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Coastal Junk Removal</title>
+  <meta name="description" content="Get in touch with Coastal Junk Removal for premier hauling and moving services across Coastal Virginia. Schedule today!">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/styles.css" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #000;
+      color: #fff;
+    }
+    .contact-section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 4rem 1rem;
+    }
+    .contact-box {
+      background: #111;
+      padding: 2rem;
+      border-radius: 16px;
+      max-width: 600px;
+      width: 100%;
+      box-shadow: 0 0 15px rgba(255,255,255,0.05);
+    }
+    .contact-box h2 {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    .contact-box form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .contact-box input, .contact-box textarea {
+      padding: 0.75rem;
+      border-radius: 8px;
+      border: none;
+      font-size: 1rem;
+    }
+    .contact-box button {
+      padding: 0.75rem;
+      background: #800020;
+      border: none;
+      border-radius: 50px;
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    .contact-box button:hover {
+      background: #5a0015;
+    }
+    .contact-details {
+      margin-top: 2rem;
+      text-align: center;
+      font-size: 0.95rem;
+      color: #ccc;
+    }
+  </style>
 </head>
 <body>
-
 <header class="navbar">
-  <img src="/assets/logo.png" alt="Coastal Junk Removal Logo" style="height: 50px;">
+  <div class="logo"><img src="/assets/logo.png" alt="Coastal Junk Removal Logo" style="height: 50px;"></div>
   <div class="hamburger" onclick="toggleMenu()">
     <span></span>
     <span></span>
@@ -22,32 +78,31 @@
     <a href="/junk-removal.html">Junk Removal</a>
     <a href="/moving-services.html">Moving Services</a>
     <a href="/contact.html">Contact</a>
-    <a href="/login.html">Admin</a>
   </nav>
 </header>
 
-<section class="hero" style="background: url('/assets/hero.png') center/cover no-repeat;">
-  <div class="hero-content">
-    <h1>Contact Coastal Junk Removal</h1>
-    <p>Reach out today for full-service hauling and moving assistance across Coastal Virginia.</p>
-  </div>
-</section>
-
-<section class="services" style="flex-direction: column; align-items: center;">
-  <div class="service" style="max-width:600px;">
-    <h2>Get in Touch</h2>
-    <form action="/thank-you.html" method="POST" style="display:flex; flex-direction:column; gap:1rem;">
-      <input type="text" name="name" placeholder="Your Name" required style="padding:0.75rem; border-radius:8px; border:none;">
-      <input type="email" name="email" placeholder="Your Email" required style="padding:0.75rem; border-radius:8px; border:none;">
-      <input type="text" name="phone" placeholder="Your Phone" required style="padding:0.75rem; border-radius:8px; border:none;">
-      <textarea name="message" rows="5" placeholder="Tell us about your project..." required style="padding:0.75rem; border-radius:8px; border:none;"></textarea>
-      <button type="submit" class="cta-button">Send Message</button>
+<section class="contact-section">
+  <div class="contact-box">
+    <h2>Contact Coastal Junk Removal</h2>
+    <form action="/thank-you.html" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <input type="text" name="phone" placeholder="Your Phone" required />
+      <textarea name="message" rows="5" placeholder="Tell us about your project..." required></textarea>
+      <button type="submit">Send Message</button>
     </form>
+  </div>
+
+  <div class="contact-details">
+    <p><strong>Service Hours:</strong> Mon–Sat, 8am – 3pm</p>
+    <p><strong>Phone:</strong> (757) 279-8647</p>
+    <p><strong>Service Areas:</strong> Newport News, Williamsburg, Norfolk, Hampton Roads, and more.</p>
+    <p>We respond within 24 hours. Your space deserves professional care.</p>
   </div>
 </section>
 
 <footer class="footer">
-  <p>&copy; 2024 Coastal Junk Removal | Trusted Service Providers</p>
+  <p>&copy; 2024 Coastal Junk Removal | Clean Service. Clear Pricing.</p>
 </footer>
 
 <script>
